--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.5.0",
     "chokidar": "^3.5.3",
     "framer-motion": "^10.12.6",
     "react": "^18.2.0",
