--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
+    "@uselessdev/datepicker": "^2.7.0",
     "axios": "^1.5.0",
+    "chakra-ui": "^0.3.9",
     "chokidar": "^3.5.3",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.12.6",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^1.43.1",
@@ -50,6 +54,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "cross-env": "^7.0.3",
