--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-tsparticles": "^1.43.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
