--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.12.6",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -55,12 +56,14 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/react-big-calendar": "^1.8.7",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "cross-env": "^7.0.3",
     "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
+    "json-loader": "^0.5.7",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.14.1",
     "styled-components": "^5.3.10"
