--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chokidar": "^3.5.3",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.12.6",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
     "react-datepicker": "^4.16.0",
