--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^2.6.0",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,11 +21,15 @@
     "chokidar": "^3.5.3",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.12.6",
+    "gapi-script": "^1.2.0",
+    "google-auth-library": "^9.7.0",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-image-file-resizer": "^0.4.8",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
