--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.11",
     "@uselessdev/datepicker": "^2.7.0",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.3",
     "chakra-ui": "^0.3.9",
     "chokidar": "^3.5.3",
     "date-fns": "^2.30.0",
@@ -27,6 +28,8 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
+    "react-bootstrap": "^2.10.2",
+    "react-chrono": "^2.6.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
