--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chokidar": "^3.5.3",
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.12.6",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
